# ChatApp

./: main.py  pyproject.toml  server.py  ui.ui
ChatApp Server/: database.py  server.py
