[project]
name = "chatapp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.0.3",
    "pyqt5>=5.15.11",
    "requests>=2.32.3",
    "peewee>=3.17.6",
]
readme = "README.md"
requires-python = ">= 3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatapp"]
